# gapi

./: .gitignore  .gitmodules  CMakeLists.txt  gapi_impl_opengl.cpp
include/: gapi.hpp  gapi_impl_opengl.hpp
include/gapi/: gapi.hpp  gapi_impl_opengl.hpp
src/: gapi.cpp  gapi_impl_opengl.cpp
vendors/: CMakeLists.txt
